--- a/Installer_Src/Setup DreamWorld/FormPermissions.resx
+++ b/Installer_Src/Setup DreamWorld/FormPermissions.resx
@@ -123,6 +123,9 @@
   <data name="AllowGods.ToolTip" xml:space="preserve">
     <value>f this box is checked In Settings-&gt;Permissions, then any  user with a level  &gt;= 100 in the Web panel can become a God, anywhere.  This can be set for individual regions if the default in Permissions is UN-checked,  and you override it in the region panel with "Allow Gods In This Region".  This setting has nothing to do with the other two settings.  </value>
   </data>
+  <metadata name="$this.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
