--- a/Installer_Src/Setup DreamWorld/Chooser.resx
+++ b/Installer_Src/Setup DreamWorld/Chooser.resx
@@ -120,6 +120,9 @@
   <metadata name="Group.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="$this.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -569,9 +572,5 @@
         AAD/4AAAB/8AAP/gAAAH/wAA/+AAAAf/AAD/4AAAB/8AAP/gAAAH/wAA/+AAAAf/AAD/4AAAB/8AAP/g
         AAAH/wAA/+AAAAf/AAD/4AAAB/8AAP/wAAAP/wAA///AA///AAD///////8AAP///////wAA
 </value>
-  </data>
-  <data name="TitleText" xml:space="preserve">
-    <value>Choose Region</value>
-    <comment>Choose Region</comment>
   </data>
 </root>
