--- a/Installer_Src/Setup DreamWorld/Chooser.resx
+++ b/Installer_Src/Setup DreamWorld/Chooser.resx
@@ -573,4 +573,7 @@
         AAAH/wAA/+AAAAf/AAD/4AAAB/8AAP/wAAAP/wAA///AA///AAD///////8AAP///////wAA
 </value>
   </data>
+  <data name="TitleText" xml:space="preserve">
+    <value>Choose Region</value>
+  </data>
 </root>
