--- a/Installer_Src/Setup DreamWorld/My Project/Resources.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.resx
@@ -208,7 +208,7 @@
   <data name="disk_yellow" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\disk_yellow.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="server_gWSCLient" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="Server_Client" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\server_CLient.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="window_add" type="System.Resources.ResXFileRef, System.Windows.Forms">
@@ -354,21 +354,17 @@
   </data>
   <data name="Exit_text" xml:space="preserve">
     <value>Exit</value>
-    
   </data>
   <data name="Starting" xml:space="preserve">
     <value>Starting Up ...</value>
-    
   </data>
   <data name="Start_text" xml:space="preserve">
     <value>Start</value>
   </data>
   <data name="Stopped" xml:space="preserve">
     <value>... Stopped</value>
-    
   </data>
   <data name="Stop_text" xml:space="preserve">
     <value>Stop</value>
-    
   </data>
 </root>
