--- a/Installer_Src/Setup DreamWorld/FormBird.en.resx
+++ b/Installer_Src/Setup DreamWorld/FormBird.en.resx
@@ -117,7 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="PrimNameTextBox.ToolTip" xml:space="preserve">
-    <value>By default the module will create a flock of plain wooden spheres, however this can be overridden to the name of an existing prim that  needs to already exist in the scene - i.e. be rezzed in the region.</value>
+  <data name="Prim_Name" xml:space="preserve">
+    <value>Prim Name (default=SeaGull1)</value>
   </data>
 </root>
